# imago

./: .gitignore  BUILD.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json
.claude/commands/: bigcommit.md  commit.md  focus.md  lint.md  refine.md
.claude/commands/scripts/: rewrap_code.py  rewrap_prose.py
.imago/: imagorc
dev/: ARCHITECTURE.md  DEBUG.md  DESIGN.md  PSEUDOCODE.md  TODO.md  VISION.md
docs/: _config.yml  index.html  index.md
middleware/: invoke
rappture/: imago.py  tool.xml
skl/: graphite
src/: CMakeLists.txt  Makefile  elementData.f90
src/applySpaceGroup/: CMakeLists.txt
src/atomSCF/: CMakeLists.txt
src/contract/: CMakeLists.txt
src/data/: CMakeLists.txt  elemental_groups.toml  spaceDB.tgz
src/gaussFit/: CMakeLists.txt  gaussFit.f90
src/imago/: CMakeLists.txt  atomicSites.f90  atomicTypes.f90  elecStat.f90  exchCorr.f90  field.F90  hdf5PSCFIntg.F90  hdf5SCFIntg.F90  hdf5SCFPotRho.f90  imago.F90  imagoWrap.f90  input.f90  integrals.F90  integrals3Terms.F90  kpoints.f90  lattice.f90  loen.f90  mathSubs.f90  o_electrostatics.mod  optc.F90  populate.F90  potential.f90  potentialUpdate.F90  xdmf_vtk.f90
src/imago/auxiliary/: CMakeLists.txt  imagoKkc.f90
src/imago/complex/: CMakeLists.txt
src/imago/real/: CMakeLists.txt
src/makeKPoints/: CMakeLists.txt  makekpoints.F90
src/makeKPoints/compvis/: CMakeLists.txt
src/makeKPoints/std/: CMakeLists.txt
src/scripts/: CMakeLists.txt  XYZ.py  bond_analysis.py  bond_analysisrc.py  build_initial_potentials.py  cif2skl.py  cluster_probe.py  clusterrc.py  cod_fish.py  collectSYBD.py  condense.py  condenserc.py  curation_manifest.py  deadmd.py  dump2skl.py  dump2sklrc.py  element_data.py  element_pct.py  envs.sh  expand_manifest.py  graspElems.py  guidance_db.py  guidance_harvest.py  guidance_promote.py  hdf5Comp.py  imago.py  initial_potential_db.py  insert3cbo.py  insert3cborc.py  interFit.py  lmp2skl.py  makeBDB.py  makeBDBrc.py  makeBOND.py  makeBONDrc.py  makeFittedRhoV.py  makeFittedRhoVrc.py  makePDOS.py  makePDOSrc.py  makePotDB.py  (+43 more)
src/scripts/kaleidoscope/: __init__.py  cache.py  cluster_config.py  dispatch.py  model.py  runners.py  wingbeats.py  workspace.py
src/scripts/kaleidoscope/builders/: __init__.py  kpoint_convergence.py  predict_verify.py
src/tests/: CMakeLists.txt  conftest.py  pyproject.toml  test_build_initial_potentials.py  test_cif2skl.py  test_cluster_config.py  test_cluster_probe.py  test_clusterrc.py  test_cod_fish.py  test_curation_manifest.py  test_expand_manifest.py  test_guidance_db.py  test_guidance_harvest.py  test_guidance_promote.py  test_imago_api.py  test_initial_potential_db.py  test_interfit_output.py  test_kaleidoscope.py  test_kpoint_convergence.py  test_makegroups.py  test_makeinput_bispec.py  test_makeinput_build_api.py  test_makeinput_gamma.py  test_makeinput_pot.py  test_makeinput_reduce.py  test_predict_verify.py  test_structure_control_io.py  test_structure_control_unit.py
src/tests/fixtures/cif/: si_fd3m_origin1.cif  si_fd3m_origin2.cif
tests/: test_dirac_helpers.py  test_element_data.py  test_o.py  test_structure_control_ops.py  test_structure_control_unit.py
tests/fixtures/structures/: beo_hexagonal.skl
